[tool.poetry]
name = "tubex-replit"
version = "0.1.0"
description = "A simple way to use Tubex with Python online."
authors = ["Simon Rohou <simon.rohou@ensta-bretagne.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
pyibex = "^1.8.1"
tubex_lib = "^3.0.5"
vibes = "^0.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"