[tool.poetry]
name = "codac-replit"
version = "0.1.13"
description = "A simple way to use Codac with Python online."
authors = ["Simon Rohou <simon.rohou@ensta-bretagne.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
codac = "^0.1.13"
vibes = "^0.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"